# DoggedAggregation

./: .gitignore  README.md
gate/: CMakeLists.txt  gate.config  gate.cpp
gate/lib/: AES.cpp  AES.h  Agregator.cpp  Agregator.h  DataSerializer.cpp  DataSerializer.h  Gate.cpp  Gate.h  Header.h  Host.cpp  Host.h  Socket.cpp  Socket.h  SocketInterface.h  SocketTCP.cpp  SocketTCP.h  SocketUDP.cpp  SocketUDP.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h
sensor/: CMakeLists.txt  sensor.config  sensor.cpp
sensor/lib/: DataSerializer.cpp  DataSerializer.h  Document.cpp  Document.h  Host.cpp  Host.h  Socket.cpp  Socket.h  SocketInterface.h  SocketUDP.cpp  SocketUDP.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h
server/: client.py
server/socketLib/: Host.py  RawSocket.py  Socket.py  SocketInterface.py  SocketTCP.py  __init__.py
serverModule/: .config  FileType.py  main.py  requirements.txt  server.py
serverModule/scripts/: create_dir.sh
serverModule/socketLib/: Host.py  RawSocket.py  Socket.py  SocketInterface.py  __init__.py
